fix: stretch card width in distribution add layout

--- a/apps/dataset-catalog/components/dataset-form/components/distribution-section/distributions.module.scss
+++ b/apps/dataset-catalog/components/dataset-form/components/distribution-section/distributions.module.scss
@@ -30,6 +30,10 @@
   display: flex;
   height: fit-content;
   align-items: center;
+
+  > :first-child {
+    width: 100%;
+  }
 }
 
 .format {
